[package]
name = "apo-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="True Range,Average True Range and Normalized True Range Implementation In Rust"
repository="https://github.com/immortalinfidel/apo-rs"
homepage="https://github.com/immortalinfidel/apo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { path = "../ta-common", version = "0.1.0" }
ema-rs = { path = "../ema-rs", version = "0.1.0" }
